--- a/pipeline/ReadQueryfromConfigFile.json
+++ b/pipeline/ReadQueryfromConfigFile.json
@@ -47,7 +47,7 @@
 				"userProperties": [],
 				"typeProperties": {
 					"items": {
-						"value": "@activity('Lookup1').output.value",
+						"value": "@activity('ReadConfigFile').output.value",
 						"type": "Expression"
 					},
 					"isSequential": true,
